# robotics_second_project

./: .gitignore  CMakeLists.txt  info.txt  package.xml  waypoints.csv
cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapper_params_online_async.yaml  move_base_params.yaml  parameters.cfg
launch/: amcl.launch.xml  launch.launch  mapping.launch  turtlebot_amcl.launch
map/: add_border.py  map.pgm  map.yaml
map/stage/: map.world  turtlebot.inc
rviz/: robot_mapping.rviz  robot_navigation.rviz
src/: client_goals.cpp  gps_to_odom.cpp  lidar_remap.cpp  odom_to_tf.cpp  set_goals.cpp
stage/: turtlebot.inc
